@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.alphatv.gr" version="2.2.0" name="ALPHA Player" provider-name="Twilight0">
+<addon id="plugin.video.alphatv.gr" version="2.2.1" name="ALPHA Player" provider-name="Twilight0">
 	<requires>
 		<import addon="xbmc.addon" version="16.1.000"/>
 		<import addon="script.module.tulip" version="2.8.1" />
@@ -19,7 +19,10 @@
 		<source>https://github.com/Twilight0/plugin.video.alphatv.gr</source>
 		<website>http://www.alphatv.gr/</website>
         <size>598620</size>
-		<news>[B]2.2.0[/B]
+		<news>[B]2.2.1[/B]
+- Tweak pagination function
+
+[B]2.2.0[/B]
 - Add pagination for long lists (# items per page are selectable)
 - Tweaked strings integers
 - Tweaked imports for Matrix
